fixed mobile breaking on ios

--- a/src/styles/mcg-concept-2.scss
+++ b/src/styles/mcg-concept-2.scss
@@ -849,6 +849,7 @@
     .column {
       width: 100%;
       text-align: center;
+      flex-basis: 100%;
     }
 
     svg {
