--- a/src/styles/mcg-concept.scss
+++ b/src/styles/mcg-concept.scss
@@ -834,6 +834,7 @@
     .column {
       width: 100%;
       text-align: center;
+      flex-basis: 100%;
     }
 
     svg {
